lighten font in dark mode, button fixes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -165,6 +165,14 @@ a:hover img.docicon {
   transition: all 0.2s ease;
 }
 
+html[data-theme='dark'] .badge--secondary {
+  background: #3e3f3f;
+}
+
+html[data-theme='dark'] .badge--secondary:hover {
+  background: #313232;
+}
+
 a.button {
   background: #a334fb;
   color: white;
@@ -261,6 +269,10 @@ h2.subtitle {
   margin-top: 20px;
 }
 
+html[data-theme='dark'] h2.subtitle {
+  color: #acb0c5;
+}
+
 h5 {
   margin-top: 40px;
   letter-spacing: 7%;
@@ -277,6 +289,10 @@ p {
   font-size: 1.125rem;
   line-height: 1.65rem;
   font-weight: 400;
+}
+
+html[data-theme='dark'] p {
+  color: #acb0c5;
 }
 
 a.quicklink {
